--- a/main.scss
+++ b/main.scss
@@ -98,7 +98,7 @@ main {
             left: 50%;
             transform: translate(-50%, -50%);
             animation: mouth_hold 5s;
-            // font-family: 'Vanilla', sans-serif;
+            font-family: 'Vanilla', sans-serif;
             width: 50%;
             font-size: 40px;
             color: #fff;
